# GRPC_sample

./: README.md
AndroidApplication/app/: build.gradle.kts
AndroidApplication/app/src/androidTest/java/com/dev/myapplication/: ExampleInstrumentedTest.kt
AndroidApplication/app/src/main/: AndroidManifest.xml
AndroidApplication/app/src/main/java/com/dev/myapplication/: MainActivity.kt
AndroidApplication/app/src/main/java/com/dev/myapplication/ui/theme/: Color.kt  Theme.kt  Type.kt
AndroidApplication/app/src/main/proto/: user.proto
AndroidApplication/app/src/test/java/com/dev/myapplication/: ExampleUnitTest.kt
AndroidApplication/gradle/: libs.versions.toml
AndroidApplication/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt  user_server.cpp
